fixed some stuff

--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
     <script src="Build/ld47.loader.js"></script>
     <script>
       createUnityInstance(document.querySelector("#unity-canvas"), {
-        dataUrl: "Build/ld47.data.gz",
-        frameworkUrl: "Build/ld47.framework.js.gz",
-        codeUrl: "Build/ld47.wasm.gz",
+        dataUrl: "Build/ld47.data",
+        frameworkUrl: "Build/ld47.framework.js",
+        codeUrl: "Build/ld47.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "LD47",
